--- a/admin/Tpl/default/Index/left.html
+++ b/admin/Tpl/default/Index/left.html
@@ -42,14 +42,14 @@
 
                 </li>
 
-                <!-- <li>
+                <li>
                     <a class="xnfy520_left_title" href="javascript:;">广告管理</a>
 
                     <ul>
-                        <li><a  id="Left-AdvertCategory" class="top-action" href="__APP__/AdvertCategory/index">广告分类</a></li>
+                        <!-- <li><a  id="Left-AdvertCategory" class="top-action" href="__APP__/AdvertCategory/index">广告分类</a></li> -->
                         <li><a  id="Left-AdvertList" class="top-action" href="__APP__/AdvertList/index">广告列表</a></li>
                     </ul>
-                </li> -->
+                </li>
 
                 <li>
                     <a class="xnfy520_left_title" href="javascript:;">区域管理</a>
