--- a/home/Tpl/default/Index/login.html
+++ b/home/Tpl/default/Index/login.html
@@ -19,7 +19,7 @@
                 	<div id="xm-dl-left5">
                     	<ul>
                         	<li><input type="image" src="../Public/image/12.jpg" width="102" height="37" /></li>
-                            <li id="xm-jz"><a href="#">忘记密码?</a></li>
+                            <li id="xm-jz"><a href="__APP__/Index/forgot_password">忘记密码?</a></li>
                         </ul>
                     </div>
                     <div id="xm-dl-left7">&nbsp;</div>
