--- a/admin/Tpl/default/System/configuration.html
+++ b/admin/Tpl/default/System/configuration.html
@@ -40,7 +40,7 @@
         <ul style="height: 30px;">
             <li id="switch-change-1" class="default-li" style="cursor: pointer;width: 100px;height: 30px;line-height: 30px;float: left;margin-left: 85px;background: #95D0DE;text-align: center;margin-right: 10px;font-weight: bold;color: #546C83;">基本信息</li>
             <li id="switch-change-2" class="default-li" style="cursor:pointer;width: 100px;height: 30px;line-height: 30px;float: left;background: #546C83;text-align: center;font-weight: bold;margin-right: 10px;color: white;">联系方式</li>
-            <!--<li id="switch-change-3" class="default-li" style="cursor:pointer;width: 100px;height: 30px;line-height: 30px;float: left;background: #546C83;text-align: center;font-weight: bold;margin-right: 10px;color: white;">客户服务</li>-->
+            <li id="switch-change-3" class="default-li" style="cursor:pointer;width: 100px;height: 30px;line-height: 30px;float: left;background: #546C83;text-align: center;font-weight: bold;margin-right: 10px;color: white;">邮箱配置</li>
             <!--<li id="switch-change-4" class="default-li" style="cursor:pointer;width: 100px;height: 30px;line-height: 30px;float: left;background: #546C83;text-align: center;font-weight: bold;margin-right: 10px;color: white;">特别关注</li>-->
         </ul>
         <ul id="switch-change-1-sub" class="default-li-style">
@@ -79,51 +79,30 @@
 
         <ul id="switch-change-2-sub" class="default-li-style" style="display: none;">
 
-            <li class="systemt-set-li"><strong class="system-set-title">在线客服：</strong>
-                <textarea name="contact_online_service" style="width: 305px;"><{$Think.config.contact_online_service}></textarea>
-                <strong class="system-set-title">服务时间：</strong>
-                <textarea name="contact_online_service_time" style="width: 305px;"><{$Think.config.contact_online_service_time}></textarea>
-            </li>
-
-            <li class="systemt-set-li"><strong class="system-set-title">免费热线：</strong>
-                <textarea name="contact_free_hotline" style="width: 305px;"><{$Think.config.contact_free_hotline}></textarea>
-                <strong class="system-set-title">服务时间：</strong>
-                <textarea name="contact_free_hotline_time" style="width: 305px;"><{$Think.config.contact_free_hotline_time}></textarea>
-            </li>
-
-            <li class="systemt-set-li"><strong class="system-set-title">电话：</strong>
-                <textarea name="contact_phone" style="width: 305px;"><{$Think.config.contact_phone}></textarea>
-                <strong class="system-set-title">传真：</strong>
-                <textarea name="contact_fax" style="width: 305px;"><{$Think.config.contact_fax}></textarea>
-            </li>
-
-            <li class="systemt-set-li"><strong class="system-set-title">邮箱：</strong>
-                <textarea name="contact_email"><{$Think.config.contact_email}></textarea>
+            <li class="systemt-set-li"><strong class="system-set-title">工作时间：</strong>
+                <textarea name="conf1"><{$Think.config.conf1}></textarea>
                 <span class="tips"></span>
             </li>
-
-            <li class="systemt-set-li"><strong class="system-set-title">联系地址：</strong>
-                <textarea name="contact_address" style="width: 305px;"><{$Think.config.contact_address}></textarea>
-                <span class="tips"></span>
-                <strong class="system-set-title">邮编：</strong>
-                <textarea name="contact_zip" style="width: 305px;"><{$Think.config.contact_zip}></textarea>
-                <span class="tips"></span>
-            </li>
-
-            <li class="systemt-set-li"><strong class="system-set-title">新浪微博：</strong>
-                <textarea name="contact_sina_weibo" style="width: 305px;"><{$Think.config.contact_sina_weibo}></textarea>
-                <strong class="system-set-title">腾讯微博：</strong>
-                <textarea name="contact_tencent_weibo" style="width: 305px;"><{$Think.config.contact_tencent_weibo}></textarea>
-            </li>
-            <li class="systemt-set-li"><strong class="system-set-title">ＱＱ空间：</strong>
-                <textarea name="contact_qq_zone" style="width: 305px;"><{$Think.config.contact_qq_zone}></textarea>
+            
+            <li class="systemt-set-li"><strong class="system-set-title">客服团队：</strong>
+                <textarea name="conf2"><{$Think.config.conf2}></textarea>
                 <span class="tips"></span>
             </li>
 
         </ul>
 
         <ul id="switch-change-3-sub" class="default-li-style" style="display: none;">
+            <li class="systemt-set-li"><strong class="system-set-title">SMTP：</strong>
+                <textarea name="email_host" style="width: 305px;"><{$Think.config.email_host}></textarea>
+                <strong class="system-set-title">端口：</strong>
+                <textarea name="email_prot" style="width: 305px;"><{$Think.config.email_prot|default="25"}></textarea>
+            </li>
 
+            <li class="systemt-set-li"><strong class="system-set-title">用户名：</strong>
+                <textarea name="email_username" style="width: 305px;"><{$Think.config.email_username}></textarea>
+                <strong class="system-set-title">密码：</strong>
+                <textarea name="email_password" style="width: 305px;"><{$Think.config.email_password}></textarea>
+            </li>
         </ul>
 
         <ul id="switch-change-4-sub" class="default-li-style" style="display: none;">
