--- a/home/Tpl/default/Member/CommodityOrder.html
+++ b/home/Tpl/default/Member/CommodityOrder.html
@@ -56,12 +56,18 @@
                                     </tr>
                                   </volist>
                                   <tr>
-                                      <td style="text-align:left;text-indent:14px;height:30px" colspan="4">
+                                      <td style="text-align:left;text-indent:14px;height:30px" colspan="3">
                                       收货地址:<{$vo_o.address.where_text}> <{$vo_o.address.street}> (<{$vo_o.address.zip}>) <notempty name="vo_o.address.cellphone">手机号:<{$vo_o.address.cellphone}></notempty> <notempty name="vo_o.address.phone">电话:<{$vo_o.address.phone}></notempty> 收货人:<{$vo_o.address.consignee}>
                                       </td>
-                                      <td style="text-align:right;padding-right:12px">
+                                      <td style="text-align:right;padding-right:12px" colspan="2">
                                         <gt name="vo_o.pay_type" value="0">
-                                          <a style="color:blue" href="__APP__/Member/logistics_tracking">物流跟踪</a>
+                                          (
+                                          <notempty name="vo_o.shipments_data">
+                                            已发货 <a style="color:blue" href="__APP__/Member/logistics_tracking/id/<{$vo_o.id}>">物流跟踪</a>
+                                          <else/>
+                                            未发货
+                                          </notempty>
+                                          )
                                         </gt>
                                       </td>
                                   </tr>
